<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityMenu">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        app:srcCompat="@drawable/grupo2"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textomenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/our_menu"
        android:textAllCaps="true"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="232dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:paddingHorizontal="50dp">

        <Button
            android:id="@+id/coldDrinks"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="2dp"
            android:background="@color/purple_grey"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="@string/cold_drinks"/>

        <Button
            android:id="@+id/hotDrinks"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="2dp"
            android:background="@color/purple_grey"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="@string/hot_drinks"/>

        <Button
            android:id="@+id/sweets"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="2dp"
            android:background="@color/purple_grey"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="@string/sweets"/>

        <Button
            android:id="@+id/salties"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="2dp"
            android:background="@color/purple_grey"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="@string/salties"/>

        <Button
            android:id="@+id/combos"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="2dp"
            android:background="@color/purple_grey"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="@string/combos"/>

        <Button
            android:id="@+id/custom"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="2dp"
            android:background="@color/purple_grey"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="@string/custom"/>
    </GridLayout>
</LinearLayout>