<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/thecheezery" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/purple_grey">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingHorizontal="25dp"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="@color/dusty_white"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:layout_marginTop="40dp"
            android:paddingHorizontal="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/welcome_description"
            android:textColor="@color/dusty_white"
            android:textSize="18sp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/btngetstarted"
            android:layout_marginTop="25dp"
            android:layout_width="237dp"
            android:layout_height="39dp"
            android:text="@string/button_start"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:background="@color/last_pink"/>

    </LinearLayout>

</LinearLayout>